# zoho-dashboard

./: .dockerignore  .env.example  .env.local.mysql.example  .env.production  .gitignore  AGENTS.md  DEPLOYMENT_REFERENCE.md  Dockerfile  Dockerfile.deploy  Dockerfile.etl  Dockerfile.etl.deploy  PROJECT_HANDOFF.md  README.md  docker-compose.production.yml  docker-compose.yml  netlify.toml  pyproject.toml  requirements.txt  run_local.py  setup_local_db.py  share-demo.cmd
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
config/dashboard_rules/: installation_combos.jsonc  sales_marketing_fc2.jsonc
deploy/: .env.backend.production.example  CICD_GUIDE.md  CLICKHOUSE_ANALYTICS_BLUEPRINT.md  DEVOPS_CHECKLIST.md  DEVOPS_DEPLOYMENT_GUIDE.md  DEVOPS_HANDOFF.md  SOURCE_DATA_REFERENCE.md  frontend.config.production.example.js  mapping.xlsx
deploy/nginx/: qubo-dashboard-api.conf.example
deploy/scripts/: bootstrap_analytics.sh  deploy_backend.sh  run_pipeline.sh
deploy/sql/: bootstrap_analytics.sql  clickhouse_bootstrap.sql  clickhouse_dashboard_queries.sql  verification_queries.sql
deploy/systemd/: qubo-dashboard-pipeline.service  qubo-dashboard-pipeline.timer
frontend/: app.js  config.example.js  config.js  index.html  styles.css
qubo_dashboard/: __init__.py  analytics.py  auth.py  cleaning.py  config.py  dashboard_rules.py  logging_utils.py  main.py  mapping.py  models.py  repeat_analysis.py  repository.py  run.py  sample_data.py  semantic_service.py
qubo_dashboard/clickhouse_analytics/: __init__.py  dashboard.py  (+4 more)
(+5 files in other folders)
