[project]
name = "qubo-support-command-center"
version = "0.1.0"
description = "Full-stack support analytics dashboard for Qubo customer support and product health."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "mysql-connector-python>=9.4.0,<10.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "clickhouse-connect>=0.8.18,<1.0.0",
  "APScheduler>=3.10.4,<4.0.0",
]

[tool.uvicorn]
factory = false
